--- a/docs/reference/libags-audio/libags_audio.types.in
+++ b/docs/reference/libags-audio/libags_audio.types.in
@@ -1,5 +1,5 @@
 # GSequencer - Advanced GTK Sequencer 
-# Copyright (C) 2005-2024 Joël Krähemann
+# Copyright (C) 2005-2025 Joël Krähemann
 # 
 # This file is part of GSequencer.
 #
@@ -27,9 +27,12 @@ ags_alsa_devin_get_type
 ags_alsa_devout_flags_get_type
 ags_alsa_devout_get_type
 ags_alsa_midiin_get_type
+ags_amplifier_util_get_type
 ags_apply_bpm_get_type
 ags_apply_presets_get_type
 ags_apply_sequencer_length_get_type
+ags_apply_sf2_midi_locale_get_type
+ags_apply_sf2_synth_get_type
 ags_apply_sfz_instrument_get_type
 ags_apply_sfz_synth_get_type
 ags_apply_sound_config_get_type
@@ -47,6 +50,7 @@ ags_audio_get_type
 ags_audio_loop_get_type
 ags_audio_signal_flags_get_type
 ags_audio_signal_get_type
+ags_audio_signal_stream_mode_get_type
 ags_audio_thread_get_type
 ags_audio_unit_client_flags_get_type
 ags_audio_unit_client_get_type
@@ -200,12 +204,36 @@ ags_fx_playback_audio_signal_get_type
 ags_fx_playback_channel_get_type
 ags_fx_playback_channel_processor_get_type
 ags_fx_playback_recycling_get_type
+ags_fx_raven_synth_audio_get_type
+ags_fx_raven_synth_audio_processor_get_type
+ags_fx_raven_synth_audio_signal_get_type
+ags_fx_raven_synth_channel_get_type
+ags_fx_raven_synth_channel_processor_get_type
+ags_fx_raven_synth_recycling_get_type
+ags_fx_seq_synth_audio_get_type
+ags_fx_seq_synth_audio_processor_get_type
+ags_fx_seq_synth_audio_signal_get_type
+ags_fx_seq_synth_channel_get_type
+ags_fx_seq_synth_channel_processor_get_type
+ags_fx_seq_synth_recycling_get_type
+ags_fx_sf2_synth_audio_get_type
+ags_fx_sf2_synth_audio_processor_get_type
+ags_fx_sf2_synth_audio_signal_get_type
+ags_fx_sf2_synth_channel_get_type
+ags_fx_sf2_synth_channel_processor_get_type
+ags_fx_sf2_synth_recycling_get_type
 ags_fx_sfz_synth_audio_get_type
 ags_fx_sfz_synth_audio_processor_get_type
 ags_fx_sfz_synth_audio_signal_get_type
 ags_fx_sfz_synth_channel_get_type
 ags_fx_sfz_synth_channel_processor_get_type
 ags_fx_sfz_synth_recycling_get_type
+ags_fx_star_synth_audio_get_type
+ags_fx_star_synth_audio_processor_get_type
+ags_fx_star_synth_audio_signal_get_type
+ags_fx_star_synth_channel_get_type
+ags_fx_star_synth_channel_processor_get_type
+ags_fx_star_synth_recycling_get_type
 ags_fx_synth_audio_get_type
 ags_fx_synth_audio_processor_get_type
 ags_fx_synth_audio_signal_get_type
@@ -250,6 +278,12 @@ ags_gstreamer_port_get_type
 ags_gstreamer_server_get_type
 ags_hq_pitch_util_get_type
 ags_input_get_type
+ags_ipatch_dls2_reader_get_type
+ags_ipatch_flags_get_type
+ags_ipatch_get_type
+ags_ipatch_gig_reader_get_type
+ags_ipatch_sample_get_type
+ags_ipatch_sf2_reader_get_type
 ags_jack_client_flags_get_type
 ags_jack_client_get_type
 ags_jack_devin_flags_get_type
@@ -268,6 +302,7 @@ ags_ladspa_plugin_get_type
 ags_lfo_synth_util_get_type
 ags_linear_interpolate_util_get_type
 ags_link_channel_get_type
+ags_low_pass_filter_util_get_type
 ags_lv2_conversion_flags_get_type
 ags_lv2_conversion_get_type
 ags_lv2_event_manager_get_type
@@ -303,8 +338,11 @@ ags_move_note_get_type
 ags_noise_util_get_type
 ags_notation_flags_get_type
 ags_notation_get_type
+ags_note_flags_get_type
 ags_note_get_type
 ags_open_file_get_type
+ags_open_sf2_instrument_get_type
+ags_open_sf2_sample_get_type
 ags_open_sfz_file_get_type
 ags_open_single_file_get_type
 ags_open_wave_get_type
@@ -346,6 +384,10 @@ ags_output_get_type
 ags_pattern_get_type
 ags_peak_util_get_type
 ags_phase_shift_util_get_type
+ags_pitch_16x_alias_util_get_type
+ags_pitch_2x_alias_util_get_type
+ags_pitch_4x_alias_util_get_type
+ags_pitch_type_mode_get_type
 ags_playback_domain_get_type
 ags_playback_flags_get_type
 ags_playback_get_type
@@ -367,6 +409,7 @@ ags_pulse_devout_get_type
 ags_pulse_port_flags_get_type
 ags_pulse_port_get_type
 ags_pulse_server_get_type
+ags_raven_synth_util_get_type
 ags_recall_audio_get_type
 ags_recall_audio_run_get_type
 ags_recall_audio_signal_get_type
@@ -392,17 +435,25 @@ ags_resample_util_get_type
 ags_reset_fx_analyse_get_type
 ags_reset_fx_peak_get_type
 ags_reset_note_get_type
+ags_reset_recall_staging_get_type
 ags_resize_audio_get_type
 ags_seek_soundcard_get_type
+ags_seq_synth_util_get_type
 ags_sequencer_thread_get_type
 ags_sequencer_util_get_type
 ags_set_audio_channels_get_type
+ags_set_backlog_get_type
 ags_set_buffer_size_get_type
 ags_set_device_get_type
 ags_set_format_get_type
 ags_set_muted_get_type
 ags_set_presets_get_type
 ags_set_samplerate_get_type
+ags_sf2_loader_get_type
+ags_sf2_midi_locale_loader_get_type
+ags_sf2_synth_generator_get_type
+ags_sf2_synth_util_get_type
+ags_sf2_synth_util_loop_mode_get_type
 ags_sfz_file_get_type
 ags_sfz_group_get_type
 ags_sfz_instrument_loader_get_type
@@ -425,6 +476,7 @@ ags_sound_staging_flags_get_type
 ags_sound_state_flags_get_type
 ags_soundcard_thread_get_type
 ags_soundcard_util_get_type
+ags_star_synth_util_get_type
 ags_start_audio_get_type
 ags_start_channel_get_type
 ags_start_sequencer_get_type
@@ -443,6 +495,8 @@ ags_toggle_pattern_bit_get_type
 ags_track_flags_get_type
 ags_track_get_type
 ags_tremolo_util_get_type
+ags_vdsp_256_manager_get_type
+ags_vector_256_manager_get_type
 ags_volume_util_get_type
 ags_wah_wah_util_get_type
 ags_wasapi_devin_flags_get_type
@@ -452,24 +506,3 @@ ags_wasapi_devout_get_type
 ags_wave_flags_get_type
 ags_wave_get_type
 ags_wave_loader_get_type
-ags_apply_sf2_midi_locale_get_type
-ags_apply_sf2_synth_get_type
-ags_fx_sf2_synth_audio_get_type
-ags_fx_sf2_synth_audio_processor_get_type
-ags_fx_sf2_synth_audio_signal_get_type
-ags_fx_sf2_synth_channel_get_type
-ags_fx_sf2_synth_channel_processor_get_type
-ags_fx_sf2_synth_recycling_get_type
-ags_ipatch_dls2_reader_get_type
-ags_ipatch_flags_get_type
-ags_ipatch_get_type
-ags_ipatch_gig_reader_get_type
-ags_ipatch_sample_get_type
-ags_ipatch_sf2_reader_get_type
-ags_open_sf2_instrument_get_type
-ags_open_sf2_sample_get_type
-ags_sf2_loader_get_type
-ags_sf2_midi_locale_loader_get_type
-ags_sf2_synth_generator_get_type
-ags_sf2_synth_util_get_type
-ags_sf2_synth_util_loop_mode_get_type
