--- a/docs/reference/libgsequencer/libgsequencer.interfaces.in
+++ b/docs/reference/libgsequencer/libgsequencer.interfaces.in
@@ -1,5 +1,5 @@
 # GSequencer - Advanced GTK Sequencer 
-# Copyright (C) 2005-2024 Joël Krähemann
+# Copyright (C) 2005-2025 Joël Krähemann
 # 
 # This file is part of GSequencer.
 #
@@ -16,3 +16,21 @@
 # You should have received a copy of the GNU General Public License
 # along with GSequencer.  If not, see <http://www.gnu.org/licenses/>.
 
+GtkWidget GtkAccessible GtkBuildable GtkConstraintTarget
+GtkGrid GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable
+AgsMachine GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsSF2Synth GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsFFPlayer GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsEffectBridge GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsFFPlayerBridge GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+GtkBox GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable
+AgsEffectBulk GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsFFPlayerBulkInput GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsEffectLine GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsFFPlayerInputLine GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsEffectPad GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsFFPlayerInputPad GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+GListStore GListModel
+GtkBoxLayout GtkOrientable
+AgsAudio AgsConnectable
+AgsChannel AgsConnectable
