--- a/docs/reference/libgsequencer/libgsequencer.types.in
+++ b/docs/reference/libgsequencer/libgsequencer.types.in
@@ -1,5 +1,5 @@
 # GSequencer - Advanced GTK Sequencer 
-# Copyright (C) 2005-2024 Joël Krähemann
+# Copyright (C) 2005-2025 Joël Krähemann
 # 
 # This file is part of GSequencer.
 #
@@ -16,6 +16,12 @@
 # You should have received a copy of the GNU General Public License
 # along with GSequencer.  If not, see <http://www.gnu.org/licenses/>.
 
+ags_sf2_synth_get_type
+ags_ffplayer_bridge_get_type
+ags_ffplayer_bulk_input_get_type
+ags_ffplayer_get_type
+ags_ffplayer_input_line_get_type
+ags_ffplayer_input_pad_get_type
 ags_sf2_synth_get_type
 ags_ffplayer_bridge_get_type
 ags_ffplayer_bulk_input_get_type
