--- a/Makefile.am
+++ b/Makefile.am
@@ -1538,6 +1538,7 @@ libags_audio_thread_h_sources = \
        $(deprecated_libags_audio_thread_h_sources) \
        ags/audio/thread/ags_audio_loop.h \
        ags/audio/thread/ags_audio_thread.h \
+       ags/audio/thread/ags_audio_tree_dispatcher.h \
        ags/audio/thread/ags_channel_thread.h \
        ags/audio/thread/ags_sequencer_thread.h \
        ags/audio/thread/ags_soundcard_thread.h \
@@ -1563,6 +1564,7 @@ libags_audio_thread_c_sources = \
        $(deprecated_libags_audio_thread_c_sources) \
        ags/audio/thread/ags_audio_loop.c \
        ags/audio/thread/ags_audio_thread.c \
+       ags/audio/thread/ags_audio_tree_dispatcher.c \
        ags/audio/thread/ags_channel_thread.c \
        ags/audio/thread/ags_sequencer_thread.c \
        ags/audio/thread/ags_soundcard_thread.c \
