--- a/ags/meson.build
+++ b/ags/meson.build
@@ -228,7 +228,7 @@ libags = library('ags',
   c_args: compiler_flags,
   include_directories: [includes],
   dependencies: libags_dependencies,
-  version: '7.0.0',
+  version: '8.0.0',
   install: true,
 )
 
@@ -262,7 +262,7 @@ libags_thread = library('ags_thread',
   link_with: [
     libags,
   ],
-  version: '7.0.0',
+  version: '8.0.0',
   install: true,
 )
 
@@ -306,7 +306,7 @@ libags_server = library('libags_server',
     libags,
     libags_thread,
   ],
-  version: '7.0.0',
+  version: '8.0.0',
   install: true,
 )
 
@@ -709,6 +709,7 @@ libags_audio_sources = files(
   'audio/task/ags_toggle_pattern_bit.c',
   'audio/thread/ags_audio_loop.c',
   'audio/thread/ags_audio_thread.c',
+  'audio/thread/ags_audio_tree_dispatcher.c',
   'audio/thread/ags_channel_thread.c',
   'audio/thread/ags_export_thread.c',
   'audio/thread/ags_sequencer_thread.c',
@@ -790,7 +791,7 @@ libags_audio = library('ags_audio',
     libags_thread,
     libags_server,
   ],
-  version: '7.0.0',
+  version: '8.0.0',
   install: true,
 )
 
@@ -870,7 +871,7 @@ if get_option('vst3')
     cpp_args: cxx_compiler_flags,
     dependencies: libags_vst_dependencies,
     include_directories: [includes],
-    version: '7.0.0',
+    version: '8.0.0',
     install: true,
   )
 
@@ -914,7 +915,7 @@ libags_gui = library('ags_gui',
   c_args: compiler_flags,
   include_directories: [includes],
   dependencies: libags_gui_dependencies,
-  version: '7.0.0',
+  version: '8.0.0',
   install: true,
 )
 
@@ -1002,6 +1003,10 @@ libgsequencer_sources = files(
   'app/ags_midi_cc_editor_callbacks.c',
   'app/ags_midi_dialog.c',
   'app/ags_midi_dialog_callbacks.c',
+  'app/ags_midi_cc_dialog.c',
+  'app/ags_midi_cc_dialog_callbacks.c',
+  'app/ags_midi_cc_editor.c',
+  'app/ags_midi_cc_editor_callbacks.c',
   'app/ags_midi_preferences.c',
   'app/ags_midi_preferences_callbacks.c',
   'app/ags_navigation.c',
@@ -2197,7 +2202,7 @@ if build_gir
     [ libags, libags_thread, libags_server ],
     sources: libags_sources + libags_headers + libags_thread_sources + libags_thread_headers + libags_server_sources + libags_server_headers,
     namespace: 'Ags',
-    nsversion: '6.0',
+    nsversion: '8.0',
     identifier_prefix: 'Ags',
     symbol_prefix: 'ags_',
     export_packages: 'Ags',
@@ -2213,11 +2218,11 @@ if build_gir
     libags_audio,
     sources: libags_audio_sources + libags_audio_headers,
     namespace: 'AgsAudio',
-    nsversion: '6.0',
+    nsversion: '8.0',
     identifier_prefix: 'Ags',
     symbol_prefix: 'ags_',
     export_packages: 'AgsAudio',
-    includes: [ 'Gst-1.0', 'GstBase-1.0', 'GstAudio-1.0', 'Soup-3.0', 'GObject-2.0', 'libxml2-2.0', ],
+    includes: [ 'Gst-1.0', 'GstBase-1.0', 'GstAudio-1.0', 'Soup-3.0', 'GObject-2.0', 'libxml2-2.0', 'Ags-8.0', ],
     header: 'libags-audio.h',
     install: true,
     dependencies: libags_gir_dep,
@@ -2230,7 +2235,7 @@ if build_gir
     libags_gui,
     sources: libags_gui_sources + libags_gui_headers,
     namespace: 'AgsGui',
-    nsversion: '6.0',
+    nsversion: '8.0',
     identifier_prefix: 'Ags',
     symbol_prefix: 'ags_',
     export_packages: 'AgsGui',
