--- a/libags.sym.in
+++ b/libags.sym.in
@@ -16,167 +16,18 @@
 # You should have received a copy of the GNU General Public License
 # along with GSequencer.  If not, see <http://www.gnu.org/licenses/>.
 
-/* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2019 Joël Krähemann
- *
- * This file is part of GSequencer.
- *
- * GSequencer is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * GSequencer is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with GSequencer.  If not, see <http://www.gnu.org/licenses/>.
- */
-
-#ifndef __AGS_ID_GENERATOR_H__
-#define __AGS_ID_GENERATOR_H__
-
-#include <glib.h>
-#include <glib-object.h>
-
-G_BEGIN_DECLS
-
-gchar* ags_id_generator_create_uuid();
-
-G_END_DECLS
-
-#endif /*__AGS_ID_GENERATOR_H__*/
-/* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2021 Joël Krähemann
- *
- * This file is part of GSequencer.
- *
- * GSequencer is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * GSequencer is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with GSequencer.  If not, see <http://www.gnu.org/licenses/>.
- */
-
-#ifndef __AGS_LIST_UTIL_H__
-#define __AGS_LIST_UTIL_H__
-
-#include <glib.h>
-#include <glib-object.h>
-
-G_BEGIN_DECLS
-
-#define AGS_TYPE_LIST_UTIL         (ags_list_util_get_type())
-
-typedef struct _AgsListUtil AgsListUtil;
-
-struct _AgsListUtil
-{
-  //empty
-};
-
-GType ags_list_util_get_type(void);
-
-GList* ags_list_util_find_type(GList *list,
-			       GType gtype);
-
-G_END_DECLS
-
-#endif /*__AGS_LIST_UTIL_H__*/
-/* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2024 Joël Krähemann
- *
- * This file is part of GSequencer.
- *
- * GSequencer is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * GSequencer is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with GSequencer.  If not, see <http://www.gnu.org/licenses/>.
- */
-
-#ifndef __AGS_SOUNDCARD_HELPER_H__
-#define __AGS_SOUNDCARD_HELPER_H__
-
-#include <glib.h>
-#include <glib-object.h>
-
-#include <ags/object/ags_config.h>
-
-G_BEGIN_DECLS
-
-guint ags_soundcard_helper_config_get_dsp_channels(AgsConfig *config);
-guint ags_soundcard_helper_config_get_pcm_channels(AgsConfig *config);
-
-gdouble ags_soundcard_helper_config_get_samplerate(AgsConfig *config);
-guint ags_soundcard_helper_config_get_buffer_size(AgsConfig *config);
-guint ags_soundcard_helper_config_get_format(AgsConfig *config);
-
-gboolean ags_soundcard_helper_config_get_use_cache(AgsConfig *config);
-guint ags_soundcard_helper_config_get_cache_buffer_size(AgsConfig *config);
-
-G_END_DECLS
-
-#endif /*__AGS_SOUNDCARD_HELPER_H__*/
-/* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2021 Joël Krähemann
- *
- * This file is part of GSequencer.
- *
- * GSequencer is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * GSequencer is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with GSequencer.  If not, see <http://www.gnu.org/licenses/>.
- */
-
-#ifndef __AGS_DESTROY_UTIL_H__
-#define __AGS_DESTROY_UTIL_H__
-
-#include <glib.h>
-#include <glib-object.h>
-
-G_BEGIN_DECLS
-
-#define AGS_TYPE_DESTROY_UTIL         (ags_destroy_util_get_type())
-
-typedef struct _AgsDestroyUtil AgsDestroyUtil;
-
-struct _AgsDestroyUtil
-{
-  //empty
-};
-
-GType ags_destroy_util_get_type(void);
-
-void ags_destroy_util_dispose_and_unref(GObject *gobject);
-
-G_END_DECLS
-
-#endif /*__AGS_DESTROY_UTIL_H__*/
+ags_id_generator_create_uuid
+ags_list_util_get_type
+ags_list_util_find_type
+ags_soundcard_helper_config_get_dsp_channels
+ags_soundcard_helper_config_get_pcm_channels
+ags_soundcard_helper_config_get_samplerate
+ags_soundcard_helper_config_get_buffer_size
+ags_soundcard_helper_config_get_format
+ags_soundcard_helper_config_get_use_cache
+ags_soundcard_helper_config_get_cache_buffer_size
+ags_destroy_util_get_type
+ags_destroy_util_dispose_and_unref
 ags_solver_polynomial_get_type
 ags_solver_polynomial_error_quark
 ags_solver_polynomial_set_polynomial
