--- a/docs/reference/libags-audio/libags_audio.xml.in
+++ b/docs/reference/libags-audio/libags_audio.xml.in
@@ -299,6 +299,7 @@
       
       <xi:include href="xml/ags_audio_loop.xml"/>
       <xi:include href="xml/ags_audio_thread.xml"/>
+      <xi:include href="xml/ags_audio_tree_dispatcher.xml"/>
       <xi:include href="xml/ags_channel_thread.xml"/>
       <xi:include href="xml/ags_export_thread.xml"/>
       <xi:include href="xml/ags_sequencer_thread.xml"/>
