--- a/Makefile.am
+++ b/Makefile.am
@@ -3445,20 +3445,18 @@ libags_vst_h_sources = \
 
 deprecated_libags_vst_c_sources =
 
-EXTRA_DIST += \
-	ags/vst3-capi/host/updatehandler.h 	\
-	ags/vst3-capi/host/updatehandler.cpp
-
 libags_vst_c_sources = \
 	$(deprecated_libags_vst_c_sources) \
 	ags/vst3-capi/host/ags_vst_component_handler.cpp \
 	ags/vst3-capi/host/ags_vst_host_context.cpp \
 	ags/vst3-capi/host/componenthandler.h \
 	ags/vst3-capi/host/hostcontext.h \
+	ags/vst3-capi/host/updatehandler.h \
 	ags/vst3-capi/public.sdk/source/common/commonstringconvert.h \
 	ags/vst3-capi/public.sdk/source/vst/utility/stringconvert.h \
 	ags/vst3-capi/host/componenthandler.cpp \
 	ags/vst3-capi/host/hostcontext.cpp \
+	ags/vst3-capi/host/updatehandler.cpp \
 	ags/vst3-capi/public.sdk/source/common/commonstringconvert.cpp \
 	ags/vst3-capi/public.sdk/source/vst/utility/stringconvert.cpp \
 	ags/vst3-capi/pluginterfaces/gui/ags_vst_iplug_view.cpp \
