--- a/ags/meson.build
+++ b/ags/meson.build
@@ -805,6 +805,10 @@ if get_option('vst3')
     'vst3-capi/host/updatehandler.h',
     'vst3-capi/host/hostcontext.cpp',
     'vst3-capi/host/updatehandler.cpp',
+    'vst3-capi/public.sdk/source/common/commonstringconvert.h',
+    'vst3-capi/public.sdk/source/vst/utility/stringconvert.h',
+    'vst3-capi/public.sdk/source/common/commonstringconvert.cpp',
+    'vst3-capi/public.sdk/source/vst/utility/stringconvert.cpp',
     'vst3-capi/host/ags_vst_host_context.cpp',
     'vst3-capi/pluginterfaces/gui/ags_vst_iplug_view_content_scale_support.cpp',
     'vst3-capi/pluginterfaces/gui/ags_vst_iplug_view.cpp',
