--- a/Makefile.am
+++ b/Makefile.am
@@ -73,6 +73,12 @@ libags_vst3_LDFLAGS = @LIBAGS_VST3_LDFLAGS@
 libags_vst3_LIBDIR = @LIBAGS_VST3_LIBDIR@
 libags_vst3_LIBS = @LIBAGS_VST3_LIBS@
 
+libags_audio_unit_plugins_CPPFLAGS = @LIBAGS_AUDIO_UNIT_PLUGINS_CPPFLAGS@
+libags_audio_unit_plugins_OBJCFLAGS = @LIBAGS_AUDIO_UNIT_PLUGINS_OBJCFLAGS@
+libags_audio_unit_plugins_LDFLAGS = @LIBAGS_AUDIO_UNIT_PLUGINS_LDFLAGS@
+libags_audio_unit_plugins_LIBDIR = @LIBAGS_AUDIO_UNIT_PLUGINS_LIBDIR@
+libags_audio_unit_plugins_LIBS = @LIBAGS_AUDIO_UNIT_PLUGINS_LIBS@
+
 if WITH_W32API
 LDFLAGS += -no-undefined -L$(top_builddir)/lib -lgnu -L/usr/lib -luuid -Wl,-subsystem,windows
 
@@ -857,12 +863,16 @@ endif
 libags_audio_la_CPPFLAGS += $(CPPFLAGS) $(LIBAGS_AUDIO_CPPFLAGS)
 
 libags_audio_la_CFLAGS = $(PICFLAGS) $(CFLAGS) $(COMPILER_FLAGS) $(WARN_FLAGS) -O -I./ $(CORE_AUDIO_CFLAGS) $(WASAPI_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBDSSIALSACOMPAT_CFLAGS) $(LIBXML2_CFLAGS) $(SAMPLERATE_CFLAGS) $(SNDFILE_CFLAGS) $(FFTW_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(GOBJECT_CFLAGS) $(JSON_GLIB_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(PULSE_CFLAGS) $(GSTREAMER_CFLAGS) $(W32API_CFLAGS)
-libags_audio_la_CXXFLAGS = $(PICFLAGS) $(CXXFLAGS) $(libags_vst3_CXXFLAGS) $(COMPILER_FLAGS) $(WARN_FLAGS) -O -I./ $(CORE_AUDIO_CFLAGS) $(WASAPI_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBDSSIALSACOMPAT_CFLAGS) $(LIBXML2_CFLAGS) $(SAMPLERATE_CFLAGS) $(SNDFILE_CFLAGS) $(FFTW_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(PULSE_CFLAGS) $(GSTREAMER_CFLAGS) $(W32API_CFLAGS)
+libags_audio_la_CXXFLAGS = $(PICFLAGS) $(CXXFLAGS) $(libags_vst3_CXXFLAGS) $(libags_audio_unit_plugins_OBJCFLAGS) $(COMPILER_FLAGS) $(WARN_FLAGS) -O -I./ $(CORE_AUDIO_CFLAGS) $(WASAPI_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBDSSIALSACOMPAT_CFLAGS) $(LIBXML2_CFLAGS) $(SAMPLERATE_CFLAGS) $(SNDFILE_CFLAGS) $(FFTW_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(PULSE_CFLAGS) $(GSTREAMER_CFLAGS) $(W32API_CFLAGS)
 libags_audio_la_LDFLAGS = $(LDFLAGS) -version-info 8:0:0 -pthread 
 libags_audio_la_LIBADD = -lm 
 
 if WITH_VST3
 libags_audio_la_LIBADD += $(libags_vst3_LIBDIR) $(libags_vst3_LIBS) libags_vst.la
+endif
+
+if WITH_AUDIO_UNIT_PLUGINS
+libags_audio_la_LIBADD += $(libags_audio_unit_plugins_LIBDIR) $(libags_audio_unit_plugins_LIBS)
 endif
 
 if WITH_W32API
@@ -922,12 +932,16 @@ endif
 
 libgsequencer_la_CPPFLAGS += $(CPPFLAGS) $(LIBGSEQUENCER_CPPFLAGS)
 libgsequencer_la_CFLAGS = $(PICFLAGS) $(CFLAGS) $(COMPILER_FLAGS) $(WARN_FLAGS) -O -I./ $(CORE_AUDIO_CFLAGS) $(WASAPI_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBDSSIALSACOMPAT_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(FFTW_CFLAGS) $(JACK_CFLAGS) $(PULSE_CFLAGS) $(GSTREAMER_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(GOBJECT_CFLAGS) $(JSON_GLIB_CFLAGS) $(LIBSOUP_CFLAGS) $(CAIRO_CFLAGS) $(GTK_CFLAGS) $(GTK_UNIX_PRINT_CFLAGS) $(POPPLER_CFLAGS) $(VTE_CFLAGS) $(W32API_CFLAGS)
-libgsequencer_la_CXXFLAGS = $(PICFLAGS) $(CXXFLAGS) $(libags_vst3_CXXFLAGS) $(COMPILER_FLAGS) $(WARN_FLAGS) -O -I./ $(CORE_AUDIO_CFLAGS) $(WASAPI_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBDSSIALSACOMPAT_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(FFTW_CFLAGS) $(JACK_CFLAGS) $(PULSE_CFLAGS) $(GSTREAMER_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(GOBJECT_CFLAGS) $(JSON_GLIB_CFLAGS) $(LIBSOUP_CFLAGS) $(CAIRO_CFLAGS) $(GTK_CFLAGS) $(GTK_UNIX_PRINT_CFLAGS) $(POPPLER_CFLAGS) $(VTE_CFLAGS) $(W32API_CFLAGS)
+libgsequencer_la_CXXFLAGS = $(PICFLAGS) $(CXXFLAGS) $(libags_vst3_CXXFLAGS) $(libags_audio_unit_plugins_OBJCFLAGS) $(COMPILER_FLAGS) $(WARN_FLAGS) -O -I./ $(CORE_AUDIO_CFLAGS) $(WASAPI_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBDSSIALSACOMPAT_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(FFTW_CFLAGS) $(JACK_CFLAGS) $(PULSE_CFLAGS) $(GSTREAMER_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(GOBJECT_CFLAGS) $(JSON_GLIB_CFLAGS) $(LIBSOUP_CFLAGS) $(CAIRO_CFLAGS) $(GTK_CFLAGS) $(GTK_UNIX_PRINT_CFLAGS) $(POPPLER_CFLAGS) $(VTE_CFLAGS) $(W32API_CFLAGS)
 libgsequencer_la_LDFLAGS = $(LDFLAGS) -version-info 0:1:0 -pthread
 libgsequencer_la_LIBADD = -lm
 
 if WITH_VST3
 libgsequencer_la_LIBADD += $(libags_vst3_LIBDIR) $(libags_vst3_LIBS) libags_vst.la
+endif
+
+if WITH_AUDIO_UNIT_PLUGINS
+libgsequencer_la_LIBADD += $(libags_audio_unit_plugins_LIBDIR) $(libags_audio_unit_plugins_LIBS)
 endif
 
 if WITH_W32API
@@ -997,6 +1011,10 @@ if WITH_VST3
 gsequencer_LDADD += $(libags_vst3_LIBDIR) $(libags_vst3_LIBS) libags_vst.la
 endif
 
+if WITH_AUDIO_UNIT_PLUGINS
+gsequencer_LDADD += $(libags_audio_unit_plugins_LIBDIR) $(libags_audio_unit_plugins_LIBS)
+endif
+
 gsequencer_LDADD += libgsequencer.la libags_audio.la libags_server.la libags_gui.la libags_thread.la libags.la
 gsequencer_LDFLAGS +=  $(RT_LIBS) $(X11_LIBS) $(CORE_AUDIO_LIBS) $(WASAPI_LIBS) $(LIBASOUND2_LIBS) $(LIBDSSIALSACOMPAT_LIBS) $(LIBAO_LIBS) $(LIBXML2_LIBS) $(LIBSOUP_LIBS) $(SNDFILE_LIBS) $(JACK_LIBS) $(PULSE_LIBS) $(GSTREAMER_LIBS) $(LIBINSTPATCH_LIBS) $(GOBJECT_LIBS) $(JSON_GLIB_LIBS) $(CAIRO_LIBS) $(GTK_LIBS) $(GTK_UNIX_PRINT_LIBS) $(POPPLER_LIBS) $(VTE_LIBS) $(W32API_LIBS)
 
@@ -1028,6 +1046,10 @@ midi2xml_LDADD = -lm
 
 if WITH_VST3
 midi2xml_LDADD += $(libags_vst3_LIBDIR) $(libags_vst3_LIBS) libags_vst.la
+endif
+
+if WITH_AUDIO_UNIT_PLUGINS
+midi2xml_LDADD += $(libags_audio_unit_plugins_LIBDIR) $(libags_audio_unit_plugins_LIBS)
 endif
 
 midi2xml_LDADD += libags_audio.la libags_server.la libags_thread.la libags.la
@@ -1632,6 +1654,22 @@ EXTRA_DIST +=  \
 	ags/plugin/ags_vst3_plugin.h
 endif
 
+if WITH_AUDIO_UNIT_PLUGINS
+libags_plugin_h_sources += \
+	ags/plugin/ags_audio_unit_conversion.h \
+	ags/plugin/ags_audio_unit_manager.h \
+	ags/plugin/ags_audio_unit_new_queue_manager.h \
+	ags/plugin/ags_audio_unit_new_queue.h \
+	ags/plugin/ags_audio_unit_plugin.h
+else
+EXTRA_DIST +=  \
+	ags/plugin/ags_audio_unit_conversion.h \
+	ags/plugin/ags_audio_unit_manager.h \
+	ags/plugin/ags_audio_unit_new_queue_manager.h \
+	ags/plugin/ags_audio_unit_new_queue.h \
+	ags/plugin/ags_audio_unit_plugin.h
+endif
+
 deprecated_libags_plugin_c_sources =
 
 libags_plugin_c_sources = \
@@ -1670,6 +1708,22 @@ EXTRA_DIST +=  \
 	ags/plugin/ags_vst3_conversion.c \
 	ags/plugin/ags_vst3_manager.c \
 	ags/plugin/ags_vst3_plugin.c
+endif
+
+if WITH_AUDIO_UNIT_PLUGINS
+libags_plugin_c_sources += \
+	ags/plugin/ags_audio_unit_conversion.c \
+	ags/plugin/ags_audio_unit_manager.c \
+	ags/plugin/ags_audio_unit_new_queue_manager.c \
+	ags/plugin/ags_audio_unit_new_queue.c \
+	ags/plugin/ags_audio_unit_plugin.c
+else
+EXTRA_DIST +=  \
+	ags/plugin/ags_audio_unit_conversion.c \
+	ags/plugin/ags_audio_unit_manager.c \
+	ags/plugin/ags_audio_unit_new_queue_manager.c \
+	ags/plugin/ags_audio_unit_new_queue.c \
+	ags/plugin/ags_audio_unit_plugin.c
 endif
 
 # libags-audio - file
@@ -2203,6 +2257,24 @@ EXTRA_DIST += \
 	ags/audio/fx/ags_fx_vst3_audio_signal.h
 endif
 
+if WITH_AUDIO_UNIT_PLUGINS
+libags_audio_fx_h_sources += \
+	ags/audio/fx/ags_fx_audio_unit_audio.h \
+	ags/audio/fx/ags_fx_audio_unit_audio_processor.h \
+	ags/audio/fx/ags_fx_audio_unit_channel.h \
+	ags/audio/fx/ags_fx_audio_unit_channel_processor.h \
+	ags/audio/fx/ags_fx_audio_unit_recycling.h \
+	ags/audio/fx/ags_fx_audio_unit_audio_signal.h
+else
+EXTRA_DIST += \
+	ags/audio/fx/ags_fx_audio_unit_audio.h \
+	ags/audio/fx/ags_fx_audio_unit_audio_processor.h \
+	ags/audio/fx/ags_fx_audio_unit_channel.h \
+	ags/audio/fx/ags_fx_audio_unit_channel_processor.h \
+	ags/audio/fx/ags_fx_audio_unit_recycling.h \
+	ags/audio/fx/ags_fx_audio_unit_audio_signal.h
+endif
+
 deprecated_libags_audio_fx_c_sources =
 
 libags_audio_fx_c_sources = \
@@ -2376,6 +2448,24 @@ EXTRA_DIST += \
 	ags/audio/fx/ags_fx_vst3_audio_signal.c
 endif
 
+if WITH_AUDIO_UNIT_PLUGINS
+libags_audio_fx_c_sources += \
+	ags/audio/fx/ags_fx_audio_unit_audio.c \
+	ags/audio/fx/ags_fx_audio_unit_audio_processor.c \
+	ags/audio/fx/ags_fx_audio_unit_channel.c \
+	ags/audio/fx/ags_fx_audio_unit_channel_processor.c \
+	ags/audio/fx/ags_fx_audio_unit_recycling.c \
+	ags/audio/fx/ags_fx_audio_unit_audio_signal.c
+else
+EXTRA_DIST += \
+	ags/audio/fx/ags_fx_audio_unit_audio.c \
+	ags/audio/fx/ags_fx_audio_unit_audio_processor.c \
+	ags/audio/fx/ags_fx_audio_unit_channel.c \
+	ags/audio/fx/ags_fx_audio_unit_channel_processor.c \
+	ags/audio/fx/ags_fx_audio_unit_recycling.c \
+	ags/audio/fx/ags_fx_audio_unit_audio_signal.c
+endif
+
 # libags-audio - task
 deprecated_libags_audio_task_h_sources =
 
@@ -2460,6 +2550,16 @@ EXTRA_DIST += \
 	ags/audio/task/ags_write_vst3_port.h
 endif
 
+if WITH_AUDIO_UNIT_PLUGINS
+libags_audio_task_h_sources += \
+	ags/audio/task/ags_instantiate_audio_unit_plugin.h \
+	ags/audio/task/ags_write_audio_unit_port.h
+else
+EXTRA_DIST += \
+	ags/audio/task/ags_instantiate_audio_unit_plugin.h \
+	ags/audio/task/ags_write_audio_unit_port.h
+endif
+
 deprecated_libags_audio_task_c_sources =
 
 libags_audio_task_c_sources = \
@@ -2540,6 +2640,16 @@ else
 EXTRA_DIST += \
 	ags/audio/task/ags_instantiate_vst3_plugin.c \
 	ags/audio/task/ags_write_vst3_port.c
+endif
+
+if WITH_AUDIO_UNIT_PLUGINS
+libags_audio_task_c_sources += \
+	ags/audio/task/ags_instantiate_audio_unit_plugin.c \
+	ags/audio/task/ags_write_audio_unit_port.c
+else
+EXTRA_DIST += \
+	ags/audio/task/ags_instantiate_audio_unit_plugin.c \
+	ags/audio/task/ags_write_audio_unit_port.c
 endif
 
 # libags-gui all files
@@ -2737,6 +2847,16 @@ EXTRA_DIST += \
 	ags/app/ags_vst3_browser.h
 endif
 
+if WITH_AUDIO_UNIT_PLUGINS
+libgsequencer_h_sources += \
+	ags/app/ags_audio_unit_browser_callbacks.h \
+	ags/app/ags_audio_unit_browser.h
+else
+EXTRA_DIST += \
+	ags/app/ags_audio_unit_browser_callbacks.h \
+	ags/app/ags_audio_unit_browser.h
+endif
+
 deprecated_libgsequencer_c_sources =
 
 libgsequencer_c_sources = \
@@ -2869,6 +2989,16 @@ else
 EXTRA_DIST += \
 	ags/app/ags_vst3_browser_callbacks.c \
 	ags/app/ags_vst3_browser.c
+endif
+
+if WITH_AUDIO_UNIT_PLUGINS
+libgsequencer_c_sources += \
+	ags/app/ags_audio_unit_browser_callbacks.c \
+	ags/app/ags_audio_unit_browser.c
+else
+EXTRA_DIST += \
+	ags/app/ags_audio_unit_browser_callbacks.c \
+	ags/app/ags_audio_unit_browser.c
 endif
 
 # libgsequencer - OSC conotroller
@@ -3096,6 +3226,20 @@ EXTRA_DIST += \
 	ags/app/machine/ags_vst3_bridge.h
 endif
 
+if WITH_AUDIO_UNIT_PLUGINS
+libgsequencer_machine_h_sources += \
+	ags/app/machine/ags_live_audio_unit_bridge_callbacks.h \
+	ags/app/machine/ags_live_audio_unit_bridge.h \
+	ags/app/machine/ags_audio_unit_bridge_callbacks.h \
+	ags/app/machine/ags_audio_unit_bridge.h
+else
+EXTRA_DIST += \
+	ags/app/machine/ags_live_audio_unit_bridge_callbacks.h \
+	ags/app/machine/ags_live_audio_unit_bridge.h \
+	ags/app/machine/ags_audio_unit_bridge_callbacks.h \
+	ags/app/machine/ags_audio_unit_bridge.h
+endif
+
 deprecated_libgsequencer_machine_c_sources =
 
 libgsequencer_machine_c_sources = \
@@ -3227,6 +3371,20 @@ EXTRA_DIST += \
 	ags/app/machine/ags_live_vst3_bridge_callbacks.c \
 	ags/app/machine/ags_vst3_bridge.c \
 	ags/app/machine/ags_vst3_bridge_callbacks.c
+endif
+
+if WITH_AUDIO_UNIT_PLUGINS
+libgsequencer_machine_c_sources += \
+	ags/app/machine/ags_live_audio_unit_bridge.c \
+	ags/app/machine/ags_live_audio_unit_bridge_callbacks.c \
+	ags/app/machine/ags_audio_unit_bridge.c \
+	ags/app/machine/ags_audio_unit_bridge_callbacks.c
+else
+EXTRA_DIST += \
+	ags/app/machine/ags_live_audio_unit_bridge.c \
+	ags/app/machine/ags_live_audio_unit_bridge_callbacks.c \
+	ags/app/machine/ags_audio_unit_bridge.c \
+	ags/app/machine/ags_audio_unit_bridge_callbacks.c
 endif
 
 # libgsequencer - editor
