--- a/docs/reference/libgsequencer/Makefile.in
+++ b/docs/reference/libgsequencer/Makefile.in
@@ -458,6 +458,9 @@ GOBJECT_API_DOC = @GOBJECT_API_DOC@
 GOBJECT_CFLAGS = @GOBJECT_CFLAGS@
 GOBJECT_LIBS = @GOBJECT_LIBS@
 GREP = @GREP@
+GSEQUENCER_AUDIO_UNIT_TEST_CFLAGS = @GSEQUENCER_AUDIO_UNIT_TEST_CFLAGS@
+GSEQUENCER_AUDIO_UNIT_TEST_CXXFLAGS = @GSEQUENCER_AUDIO_UNIT_TEST_CXXFLAGS@
+GSEQUENCER_AUDIO_UNIT_TEST_LDFLAGS = @GSEQUENCER_AUDIO_UNIT_TEST_LDFLAGS@
 GSEQUENCER_CFLAGS = @GSEQUENCER_CFLAGS@
 GSEQUENCER_CXXFLAGS = @GSEQUENCER_CXXFLAGS@
 GSEQUENCER_FUNCTIONAL_TEST_LDADD = @GSEQUENCER_FUNCTIONAL_TEST_LDADD@
